# turl

./: AGENTS.md  README.md
.github/workflows/: npm-publish.yml  pypi-publish.yml  release.yml  rust-ci.yml
docs/: subagent-uri-design.md
npm/: package.json
scripts/: build_npm_package.py  stage_npm_packages.py  stage_pypi_packages.py
skills/turl/: SKILL.md
skills/xurl/: SKILL.md
turl-cli/: Cargo.toml
turl-cli/src/: main.rs
turl-cli/tests/: cli.rs
turl-core/: Cargo.toml
turl-core/src/: error.rs  lib.rs  model.rs  render.rs  service.rs  uri.rs
turl-core/src/provider/: amp.rs  codex.rs  mod.rs
xurl-cli/: Cargo.toml
xurl-cli/src/: main.rs
xurl-cli/tests/: cli.rs
xurl-core/: Cargo.toml
xurl-core/src/: error.rs  jsonl.rs  lib.rs  model.rs  render.rs  service.rs  uri.rs
xurl-core/src/provider/: amp.rs  claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  pi.rs  skills.rs
