[package]
name = "xurl-cli"
version = "0.0.0-dev"
edition = "2024"

[[bin]]
name = "xurl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
xurl-core = { path = "../xurl-core" }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tempfile = "3.23.0"
